add loader, readme, favicon, login hover

--- a/index.html
+++ b/index.html
@@ -2,8 +2,17 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="images/svg+xml" href="images/paw-print.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="description"
+      content="PetLove is an online platform for pet owners and animal lovers. Read news, find friends, browse pet notices and add your own pets."
+    />
+    <meta
+      name="keywords"
+      content="pets, pet adoption, animals, dogs, cats, pet notices, pet news, pet friends, user profile, PetLove"
+    />
+    <meta name="author" content="Olga Ferubko" />
     <title>Petlove</title>
   </head>
   <body>
