--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       content="pets, pet adoption, animals, dogs, cats, pet notices, pet news, pet friends, user profile, PetLove"
     />
     <meta name="author" content="Olga Ferubko" />
-    <title>Petlove</title>
+    <title>PetLove — Find, adopt and share pets</title>
   </head>
   <body>
     <div id="root"></div>
