--- a/index.html
+++ b/index.html
@@ -12,8 +12,7 @@
       name="keywords"
       content="pets, pet adoption, animals, dogs, cats, pet notices, pet news, pet friends, user profile, PetLove"
     />
-    <meta name="author" content="Olga Ferubko" />
-    <title>PetLove — Find, adopt and share pets</title>
+    <title>PetLove</title>
   </head>
   <body>
     <div id="root"></div>
